<resources>
    <string name="app_name">TURNSTRS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="go_to_settings_enable_permissions">Go to settings and enable permissions.</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_login_details"><u>Forgot login details?</u></string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="signin_with_facebook">Signin With facebook</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="find_your_account">Find your Account</string>
    <string name="enter_your_email_address">Enter your email address linked to\n your account</string>
    <string name="next">Next</string>
    <string name="signup">Singup</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="conf_password">Confirm Passowrd</string>
    <string name="eula_terms_and_condition">EULA, Terms of Service and Privacy Policy</string>
    <string name="already_register">Already registered?</string>
    <string name="log_in"><u>Log in</u></string>
    <string name="search">Search</string>
    <string name="Video_Starting">Video Starting....</string>
    <string name="photo_successfully_save">Photo successfully save</string>
    <string name="camera_permission">ARView needs access to camera.</string>
    <string name="external_permission">ARView needs access to external storage.</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="filter">Filter</string>
    <string name="Gla">Gla...</string>
    <string name="library">Library</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="cancel">Cancel</string>
    <string name="report_post">Report Post</string>
    <string name="post">Post</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="Photos_and_Videos_of_you">Photos and Videos \n of you</string>
    <string name="When_people_tag_you_in_phones">When people tag you in phones and videos, they\'ll appear \n here</string>
    <string name="Profile">Profile</string>
    <string name="When_you_share">When you share photos and videos, they will appear here on your profile</string>
    <string name="Share_your_first_photo_or_video">Share your first photo or video</string>
    <string name="approve">Approve</string>
    <string name="follow">Follow</string>
    <string name="following">Followings</string>
    <string name="server_data_not_found">Server data not found</string>
    <string name="pls_enter_name">Please enter name</string>
    <string name="pls_enter_email">Please enter email</string>
    <string name="enter_valid_formet">Enter valid format</string>
    <string name="pls_enter_username">Please enter username</string>
    <string name="pls_enter_password">Please enter password</string>
    <string name="password_to_short">Password is too short (minimum is 8 characters)</string>
    <string name="pls_enter_confirm_password">Please enter confirm password</string>
    <string name="password_does_not_match">Password and Confirm password does not match</string>
    <string name="please_check_terms_and_privacy">Please check terms and privacy policy</string>
    <string name="facebook_app_id">240096849716354</string>
    <string name="fb_login_protocol_scheme">fb240096849716354</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="are_you_sure_want_to_logout">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="likes">Likes</string>
    <string name="like">Like</string>
    <string name="COMMENT_POSITION_RECEIVER">commentPositionReceiver</string>
    <string name="comments">Comments</string>
    <string name="write_a_message">Write a Message</string>
    <string name="write_to_us_about_your_objections">Write to us about your objections, we will make sure and will take action with in 24 hours!</string>
    <string name="write_here">Write here!</string>
    <string name="sumit_request">Submit Request</string>
    <string name="report_the_post">Report the Post</string>
    <string name="pls_enter_message">Please enter message</string>
    <string name="Inappropriate">Inappropriate</string>
    <string name="Spam">Spam</string>
    <string name="please_check_internet_connection">Please check interent connection</string>
    <string name="Turnt">Turnt</string>
    <string name="unTurnt">UnTurnt</string>
    <string name="nouserchat">There are no user chats</string>
    <string name="chat">CHAT</string>
    <string name="endcall">End Call</string>
    <string name="startcall">Start Call</string>
    <string name="agora_app_id">3cded220e26a42979412e32effef0602</string>
    <!-- Obtain a temp Access Token at https://dashboard.agora.io -->
    <!-- You will need to deploy your own token server for production release -->
    <!-- Leave this value empty if Security keys/Token is not enabled for your project -->
    <string name="agora_access_token" translatable="false"></string>
    <string name="ok">Ok</string>
    <string name="okwithcount">Ok(0)</string>
    <string name="update">Update</string>
    <string name="change_profile_photo">Chagne Profile Photo</string>
    <string name="first_name">First Name</string>
    <string name="chagne_background_image">Change Background Image</string>
    <string name="website">Website</string>
    <string name="about_you">About you</string>
    <string name="online">Online</string>
    <string name="contact_me">Contact Me</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="camera">Camera</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_user_name">Please enter username</string>
    <string name="please_enter_website">Please enter website</string>
    <string name="please_enter_about_us">Please enter about us</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_number">Please enter number</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="live">Live</string>
    <string name="suretoopenvideoactivity">Do you want to join this video call ?</string>
    <string name="fave5">Fave5</string>
    <string name="family">Family</string>
    <string name="share_url">https://turnstr.com/dashboard/post/</string>
    <string name="selectanyfollowingmember">Please select atleast one follfowing member.</string>
    <string-array name="string_array_resolutions">
        <item>320x240</item>
        <item>480x360</item>
        <item>640x360</item>
        <item>640x480</item>
        <item>960x540</item>
        <item>1280x720</item>
    </string-array>
    <string name="do_you_want_to_invite">Do you want to invite</string>

    <string name="wating_for_invite">Wating for invite</string>
    <string name="join_broadcast">invites you to join live broadcast</string>
    <string name="invite">Invite</string>
    <string name="join_channel_failed">Join channel failed</string>
    <string name="channel_title" translatable="false">%s(%d)</string>
    <string name="accept">Accept</string>
    <string name="requested_to_join_your_live">Request to join your_live</string>
    <string name="account_offline">Connection lost</string>
    <string name="reconnecting">Network reconnecting ...</string>
    <string name="send_msg_failed">Failed to send message</string>
    <string name="send_request_to_join_live">Send request to join live.</string>
    <string name="request">Request</string>
    <string name="into_your_live">into_your_live</string>
    <dimen name="text_size_medium">14sp</dimen>
    <string name="starlit">Starlit</string>
    <string name="bluemess">BlueMess</string>
    <string name="struck">Struck</string>
    <string name="filter_normal">Normal</string>
    <string name="oldman">OldMan</string>
    <string name="clarendon">Clarendon</string>


    <string name="lime">Lime</string>
    <string name="whisper">Whisper</string>
    <string name="amazon">Amazon</string>
    <string name="adele">Adele</string>
    <string name="cruz">cruz</string>
    <string name="metropolis">Metropolis</string>
    <string name="audrey">Audrey</string>
    <string name="rise">Rise</string>
    <string name="mars">Mars</string>
    <string name="april">April</string>
    <string name="haan">Haan</string>
    <string name="please_select_at_leaset_one_post">Please select at least one photo or video</string>


    <string name="resend_message">Resend</string>
    <string name="delete_message">Delete</string>
    <string name="download">Download</string>
    <string name="user_typing">%s is typing</string>
    <string name="two_users_typing">%s and %s are typing</string>
    <string name="users_typing"> Multiple users are typing</string>
    <string name="group_channel_list_file_message_text">%1$s has uploaded a file.</string>
    <string name="User_has_enterered_the_chat">User has enterered the chat</string>
    <string name="share_story">Share Story</string>
    <string name="delete_post">Delete Post</string>
    <string name="edit_post">Edit Post</string>
    <string name="max4">You can call max 4 members</string>
    <string name="turntstories">TRUNT STORIES</string>

</resources>