<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_normal">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.04"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_32"
        app:layout_constraintEnd_toEndOf="@+id/guideline2">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_next"
            app:layout_constraintStart_toEndOf="@+id/img_back"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txt_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18sp"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/cl_one"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:gravity="center"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.20"
        android:orientation="horizontal" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        android:paddingVertical="@dimen/dp_10"
        android:textSize="@dimen/sp_16sp"
        android:drawableTint="@color/white"
        android:paddingHorizontal="@dimen/dp_10"
        android:hint="@string/name"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/username"
        android:drawablePadding="@dimen/dp_15"
        android:alpha="0.8"
        android:textColor="@color/white"
        android:background="@drawable/backgroud_storke_white"/>


    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edt_name"
        android:paddingVertical="@dimen/dp_10"
        android:textSize="@dimen/sp_16sp"
        android:drawableTint="@color/white"
        android:paddingHorizontal="@dimen/dp_10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/email"
        android:drawablePadding="@dimen/dp_15"
        android:alpha="0.8"
        android:textColor="@color/white"
        android:background="@drawable/backgroud_storke_white"/>

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        android:paddingVertical="@dimen/dp_10"
        android:textSize="@dimen/sp_16sp"
        android:drawableTint="@color/white"
        android:paddingHorizontal="@dimen/dp_10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/username"
        android:drawablePadding="@dimen/dp_15"
        android:alpha="0.8"
        android:textColor="@color/white"
        android:background="@drawable/backgroud_storke_white"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edt_username"
        android:paddingVertical="@dimen/dp_10"
        android:textSize="@dimen/sp_16sp"
        android:drawableTint="@color/white"
        android:paddingHorizontal="@dimen/dp_10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/password"
        android:drawablePadding="@dimen/dp_15"
        android:alpha="0.8"
        android:textColor="@color/white"
        android:background="@drawable/backgroud_storke_white"/>


    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        android:paddingVertical="@dimen/dp_10"
        android:textSize="@dimen/sp_16sp"
        android:drawableTint="@color/white"
        android:paddingHorizontal="@dimen/dp_10"
        android:hint="@string/conf_password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/password"
        android:drawablePadding="@dimen/dp_15"
        android:alpha="0.8"
        android:textColor="@color/white"
        android:background="@drawable/backgroud_storke_white"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:text="@string/eula_terms_and_condition"
        android:textSize="@dimen/sp_14"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/sp_16sp"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password">

    </CheckBox>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/checkbox">

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/already_register"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16sp"
            app:layout_constraintEnd_toStartOf="@+id/txt_login"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>