<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_rectangle_background">

            <TextView
                android:id="@+id/txt_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/report_post"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/sp_18"/>



        </RelativeLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/ColorF3EFEF"/>

        <RelativeLayout
            android:id="@+id/rl_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/white_rectangle_background">

            <TextView
                android:id="@+id/txt_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/delete_post"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/sp_18"/>



        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/white_rectangle_background">

            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/cancel"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>