<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_normal">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.04"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_32"
        app:layout_constraintEnd_toEndOf="@+id/guideline2">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_back"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/cl_one"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/forgot_password"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:gravity="center"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.30"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/txt_find_acc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/find_your_account"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txt_enter_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txt_find_acc"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/enter_your_email_address"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txt_enter_email"
        android:paddingVertical="@dimen/dp_10"
        android:textSize="@dimen/sp_16sp"
        android:drawableTint="@color/white"
        android:paddingHorizontal="@dimen/dp_10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/username"
        android:drawablePadding="@dimen/dp_15"
        android:alpha="0.8"
        android:textColor="@color/white"
        android:background="@drawable/backgroud_storke_white"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        android:textColor="@color/white"
        android:text="@string/next"
        android:textSize="@dimen/sp_16sp"
        android:background="@drawable/backgroud_button"/>







</androidx.constraintlayout.widget.ConstraintLayout>